cmake_minimum_required(VERSION 3.14 FATAL_ERROR)

if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
    set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
endif()

project(three)

add_subdirectory(three)

option(THREE_ENGINE "Build engine helper library." OFF)
if (THREE_ENGINE)
    add_subdirectory(helpers/engine)
endif()

option(THREE_IMAGE "Build image helper library." OFF)
if (THREE_IMAGE)
    add_subdirectory(helpers/image)
endif()

option(THREE_SHAPE "Build shape helper library." OFF)
if (THREE_SHAPE)
    add_subdirectory(helpers/shape)
endif()

option(THREE_WINDOW "Build window helper library." OFF)
if (THREE_WINDOW)
    add_subdirectory(helpers/window)
endif()

option(THREE_IMPORT "Build import helper library." OFF)
if (THREE_IMPORT)
    add_subdirectory(helpers/import)
endif()

option(THREE_LOAD "Build glTF load helper library." OFF)
if (THREE_LOAD)
    add_subdirectory(helpers/load)
endif()

option(THREE_BUILD_EXAMPLES "Build examples." OFF)
if (THREE_BUILD_EXAMPLES)
    if (THREE_ENGINE AND THREE_WINDOW AND THREE_SHAPE)
        add_subdirectory(examples/camera)
    endif()
    if (THREE_ENGINE AND THREE_WINDOW AND THREE_SHAPE)
        add_subdirectory(examples/primitives)
    endif()
    if (THREE_ENGINE AND THREE_WINDOW AND THREE_SHAPE)
        add_subdirectory(examples/lighting)
    endif()
    if (THREE_ENGINE AND THREE_WINDOW AND THREE_IMAGE)
        add_subdirectory(examples/texturing)
    endif()
    if (THREE_ENGINE AND THREE_WINDOW AND THREE_IMPORT)
        add_subdirectory(examples/importing)
    endif()
	if (THREE_ENGINE AND THREE_WINDOW AND THREE_LOAD)
        add_subdirectory(examples/loading)
    endif()
endif()
