add_library(engine
    Vertex.h
    Face3.h
    AttributeLocation.h
    Geometry.h
    GeometryBuffer.h
    Model.h
    Model.cpp
    MeshBuilder.h
    MeshBuilder.cpp
    ShaderUtils.h
    ShaderUtils.cpp
    Material.h
    Material.cpp
    UniformName.h
    UniformName.cpp
    UniformBlockName.h
    UniformBlockName.cpp
    BoundingBox.h
    BoundingBox.cpp
    fs/FileSystem.h
    fs/FileSystem.cpp
	fs/FileNotFoundException.h
    fs/ChangeDir.h
    fs/ChangeDir.cpp
    scene/Node.h
    scene/Node.cpp
    scene/Scene.h
    scene/Scene.cpp
    scene/ITransform.h
    scene/TransformComponent.h
 )

target_link_libraries(engine
    PUBLIC
		three
)
